trino/ing.yml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: trino.kw02
    namespace: trino
  spec:
    ingressClassName: nginx
    rules:
    - host: trino.kw02
      http:
        paths:
        - backend:
            service:
              name: trino
              port:
                number: 8080
          path: /
          pathType: Prefix
kind: List
metadata:
  resourceVersion: ""
